// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker label should render a horizontal label 1`] = `
<div
  className="custom-class"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <div
    className="form-group clearfix "
  >
    <label
      className="control-label col-sm-3"
    >
      Default caption
    </label>
    <div
      className="col-sm-9"
    >
      <div
        className="widget-timepicker"
      >
        <div
          className="rdt"
        >
          <input
            className="form-control"
            disabled={false}
            name="custom-name"
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Placeholder"
            tabIndex={0}
            type="text"
            value="02:23:16.784 PM"
          />
          <div
            className="rdtPicker"
          >
            <div
              className="rdtTime"
            >
              <table>
                <tbody>
                  <tr>
                    <td>
                      <div
                        className="rdtCounters"
                      >
                        <div
                          className="rdtCounter"
                        >
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▲
                          </span>
                          <div
                            className="rdtCount"
                          >
                            2
                          </div>
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▼
                          </span>
                        </div>
                        <div
                          className="rdtCounterSeparator"
                        >
                          :
                        </div>
                        <div
                          className="rdtCounter"
                        >
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▲
                          </span>
                          <div
                            className="rdtCount"
                          >
                            23
                          </div>
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▼
                          </span>
                        </div>
                        <div
                          className="rdtCounterSeparator"
                        >
                          :
                        </div>
                        <div
                          className="rdtCounter"
                        >
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▲
                          </span>
                          <div
                            className="rdtCount"
                          >
                            16
                          </div>
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▼
                          </span>
                        </div>
                        <div
                          className="rdtCounter"
                        >
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▲
                          </span>
                          <div
                            className="rdtCount"
                          >
                            PM
                          </div>
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▼
                          </span>
                        </div>
                        <div
                          className="rdtCounterSeparator"
                        >
                          :
                        </div>
                        <div
                          className="rdtCounter rdtMilli"
                        >
                          <input
                            onChange={[Function]}
                            type="text"
                            value="784"
                          />
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <span
          aria-hidden="true"
          className="glyphicon glyphicon-time form-control-feedback"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker label should render a horizontal label with a specified width 1`] = `
<div
  className="custom-class"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <div
    className="form-group clearfix "
  >
    <label
      className="control-label col-sm-6"
    >
      Default caption
    </label>
    <div
      className="col-sm-6"
    >
      <div
        className="widget-timepicker"
      >
        <div
          className="rdt"
        >
          <input
            className="form-control"
            disabled={false}
            name="custom-name"
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Placeholder"
            tabIndex={0}
            type="text"
            value="02:23:16.784 PM"
          />
          <div
            className="rdtPicker"
          >
            <div
              className="rdtTime"
            >
              <table>
                <tbody>
                  <tr>
                    <td>
                      <div
                        className="rdtCounters"
                      >
                        <div
                          className="rdtCounter"
                        >
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▲
                          </span>
                          <div
                            className="rdtCount"
                          >
                            2
                          </div>
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▼
                          </span>
                        </div>
                        <div
                          className="rdtCounterSeparator"
                        >
                          :
                        </div>
                        <div
                          className="rdtCounter"
                        >
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▲
                          </span>
                          <div
                            className="rdtCount"
                          >
                            23
                          </div>
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▼
                          </span>
                        </div>
                        <div
                          className="rdtCounterSeparator"
                        >
                          :
                        </div>
                        <div
                          className="rdtCounter"
                        >
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▲
                          </span>
                          <div
                            className="rdtCount"
                          >
                            16
                          </div>
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▼
                          </span>
                        </div>
                        <div
                          className="rdtCounter"
                        >
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▲
                          </span>
                          <div
                            className="rdtCount"
                          >
                            PM
                          </div>
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▼
                          </span>
                        </div>
                        <div
                          className="rdtCounterSeparator"
                        >
                          :
                        </div>
                        <div
                          className="rdtCounter rdtMilli"
                        >
                          <input
                            onChange={[Function]}
                            type="text"
                            value="784"
                          />
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <span
          aria-hidden="true"
          className="glyphicon glyphicon-time form-control-feedback"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker label should render a vertical label 1`] = `
<div
  className="custom-class"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <div
    className="form-group clearfix "
  >
    <label
      className="control-label "
    >
      Default caption
    </label>
    <div
      className=""
    >
      <div
        className="widget-timepicker"
      >
        <div
          className="rdt"
        >
          <input
            className="form-control"
            disabled={false}
            name="custom-name"
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Placeholder"
            tabIndex={0}
            type="text"
            value="02:23:16.784 PM"
          />
          <div
            className="rdtPicker"
          >
            <div
              className="rdtTime"
            >
              <table>
                <tbody>
                  <tr>
                    <td>
                      <div
                        className="rdtCounters"
                      >
                        <div
                          className="rdtCounter"
                        >
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▲
                          </span>
                          <div
                            className="rdtCount"
                          >
                            2
                          </div>
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▼
                          </span>
                        </div>
                        <div
                          className="rdtCounterSeparator"
                        >
                          :
                        </div>
                        <div
                          className="rdtCounter"
                        >
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▲
                          </span>
                          <div
                            className="rdtCount"
                          >
                            23
                          </div>
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▼
                          </span>
                        </div>
                        <div
                          className="rdtCounterSeparator"
                        >
                          :
                        </div>
                        <div
                          className="rdtCounter"
                        >
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▲
                          </span>
                          <div
                            className="rdtCount"
                          >
                            16
                          </div>
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▼
                          </span>
                        </div>
                        <div
                          className="rdtCounter"
                        >
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▲
                          </span>
                          <div
                            className="rdtCount"
                          >
                            PM
                          </div>
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▼
                          </span>
                        </div>
                        <div
                          className="rdtCounterSeparator"
                        >
                          :
                        </div>
                        <div
                          className="rdtCounter rdtMilli"
                        >
                          <input
                            onChange={[Function]}
                            type="text"
                            value="784"
                          />
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <span
          aria-hidden="true"
          className="glyphicon glyphicon-time form-control-feedback"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker label should render with a different caption 1`] = `
<div
  className="custom-class"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <div
    className="form-group clearfix "
  >
    <label
      className="control-label "
    >
      Different
    </label>
    <div
      className=""
    >
      <div
        className="widget-timepicker"
      >
        <div
          className="rdt"
        >
          <input
            className="form-control"
            disabled={false}
            name="custom-name"
            onChange={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            placeholder="Placeholder"
            tabIndex={0}
            type="text"
            value="02:23:16.784 PM"
          />
          <div
            className="rdtPicker"
          >
            <div
              className="rdtTime"
            >
              <table>
                <tbody>
                  <tr>
                    <td>
                      <div
                        className="rdtCounters"
                      >
                        <div
                          className="rdtCounter"
                        >
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▲
                          </span>
                          <div
                            className="rdtCount"
                          >
                            2
                          </div>
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▼
                          </span>
                        </div>
                        <div
                          className="rdtCounterSeparator"
                        >
                          :
                        </div>
                        <div
                          className="rdtCounter"
                        >
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▲
                          </span>
                          <div
                            className="rdtCount"
                          >
                            23
                          </div>
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▼
                          </span>
                        </div>
                        <div
                          className="rdtCounterSeparator"
                        >
                          :
                        </div>
                        <div
                          className="rdtCounter"
                        >
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▲
                          </span>
                          <div
                            className="rdtCount"
                          >
                            16
                          </div>
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▼
                          </span>
                        </div>
                        <div
                          className="rdtCounter"
                        >
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▲
                          </span>
                          <div
                            className="rdtCount"
                          >
                            PM
                          </div>
                          <span
                            className="rdtBtn"
                            onContextMenu={[Function]}
                            onMouseDown={[Function]}
                          >
                            ▼
                          </span>
                        </div>
                        <div
                          className="rdtCounterSeparator"
                        >
                          :
                        </div>
                        <div
                          className="rdtCounter rdtMilli"
                        >
                          <input
                            onChange={[Function]}
                            type="text"
                            value="784"
                          />
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <span
          aria-hidden="true"
          className="glyphicon glyphicon-time form-control-feedback"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TimePicker should render 24-hour notation 1`] = `
<div
  className="custom-class"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <div
    className="widget-timepicker"
  >
    <div
      className="rdt"
    >
      <input
        className="form-control"
        disabled={false}
        name="custom-name"
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Placeholder"
        tabIndex={0}
        type="text"
        value="14:23:16.784"
      />
      <div
        className="rdtPicker"
      >
        <div
          className="rdtTime"
        >
          <table>
            <tbody>
              <tr>
                <td>
                  <div
                    className="rdtCounters"
                  >
                    <div
                      className="rdtCounter"
                    >
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▲
                      </span>
                      <div
                        className="rdtCount"
                      >
                        14
                      </div>
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▼
                      </span>
                    </div>
                    <div
                      className="rdtCounterSeparator"
                    >
                      :
                    </div>
                    <div
                      className="rdtCounter"
                    >
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▲
                      </span>
                      <div
                        className="rdtCount"
                      >
                        23
                      </div>
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▼
                      </span>
                    </div>
                    <div
                      className="rdtCounterSeparator"
                    >
                      :
                    </div>
                    <div
                      className="rdtCounter"
                    >
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▲
                      </span>
                      <div
                        className="rdtCount"
                      >
                        16
                      </div>
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▼
                      </span>
                    </div>
                    <div
                      className="rdtCounterSeparator"
                    >
                      :
                    </div>
                    <div
                      className="rdtCounter rdtMilli"
                    >
                      <input
                        onChange={[Function]}
                        type="text"
                        value="784"
                      />
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <span
      aria-hidden="true"
      className="glyphicon glyphicon-time form-control-feedback"
    />
  </div>
</div>
`;

exports[`TimePicker should render the structure 1`] = `
<div
  className="custom-class"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <div
    className="widget-timepicker"
  >
    <div
      className="rdt"
    >
      <input
        className="form-control"
        disabled={false}
        name="custom-name"
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Placeholder"
        tabIndex={0}
        type="text"
        value="02:23:16.784 PM"
      />
      <div
        className="rdtPicker"
      >
        <div
          className="rdtTime"
        >
          <table>
            <tbody>
              <tr>
                <td>
                  <div
                    className="rdtCounters"
                  >
                    <div
                      className="rdtCounter"
                    >
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▲
                      </span>
                      <div
                        className="rdtCount"
                      >
                        2
                      </div>
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▼
                      </span>
                    </div>
                    <div
                      className="rdtCounterSeparator"
                    >
                      :
                    </div>
                    <div
                      className="rdtCounter"
                    >
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▲
                      </span>
                      <div
                        className="rdtCount"
                      >
                        23
                      </div>
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▼
                      </span>
                    </div>
                    <div
                      className="rdtCounterSeparator"
                    >
                      :
                    </div>
                    <div
                      className="rdtCounter"
                    >
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▲
                      </span>
                      <div
                        className="rdtCount"
                      >
                        16
                      </div>
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▼
                      </span>
                    </div>
                    <div
                      className="rdtCounter"
                    >
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▲
                      </span>
                      <div
                        className="rdtCount"
                      >
                        PM
                      </div>
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▼
                      </span>
                    </div>
                    <div
                      className="rdtCounterSeparator"
                    >
                      :
                    </div>
                    <div
                      className="rdtCounter rdtMilli"
                    >
                      <input
                        onChange={[Function]}
                        type="text"
                        value="784"
                      />
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <span
      aria-hidden="true"
      className="glyphicon glyphicon-time form-control-feedback"
    />
  </div>
</div>
`;

exports[`TimePicker should render without a data attribute 1`] = `
<div
  className="custom-class"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <div
    className="widget-timepicker"
  >
    <div
      className="rdt"
    >
      <input
        className="form-control"
        disabled={true}
        name="custom-name"
        onChange={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="No attribute selected"
        tabIndex={0}
        type="text"
        value=""
      />
      <div
        className="rdtPicker"
      >
        <div
          className="rdtTime"
        >
          <table>
            <tbody>
              <tr>
                <td>
                  <div
                    className="rdtCounters"
                  >
                    <div
                      className="rdtCounter"
                    >
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▲
                      </span>
                      <div
                        className="rdtCount"
                      >
                        12
                      </div>
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▼
                      </span>
                    </div>
                    <div
                      className="rdtCounterSeparator"
                    >
                      :
                    </div>
                    <div
                      className="rdtCounter"
                    >
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▲
                      </span>
                      <div
                        className="rdtCount"
                      >
                        00
                      </div>
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▼
                      </span>
                    </div>
                    <div
                      className="rdtCounterSeparator"
                    >
                      :
                    </div>
                    <div
                      className="rdtCounter"
                    >
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▲
                      </span>
                      <div
                        className="rdtCount"
                      >
                        00
                      </div>
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▼
                      </span>
                    </div>
                    <div
                      className="rdtCounter"
                    >
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▲
                      </span>
                      <div
                        className="rdtCount"
                      >
                        AM
                      </div>
                      <span
                        className="rdtBtn"
                        onContextMenu={[Function]}
                        onMouseDown={[Function]}
                      >
                        ▼
                      </span>
                    </div>
                    <div
                      className="rdtCounterSeparator"
                    >
                      :
                    </div>
                    <div
                      className="rdtCounter rdtMilli"
                    >
                      <input
                        onChange={[Function]}
                        type="text"
                        value="000"
                      />
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
    <span
      aria-hidden="true"
      className="glyphicon glyphicon-time form-control-feedback"
    />
  </div>
</div>
`;
